--- a/site.conf
+++ b/site.conf
@@ -15,16 +15,16 @@
 		ssid = 'nord.freifunk.net',
 		channel = 1,
 		htmode = 'HT40-',
-		mesh_ssid = '5d:c0:ac:00:d1:4c',
-		mesh_bssid = '5d:c0:ac:00:d1:4c',
+		mesh_ssid = '5c:c0:ac:00:d1:4c',
+		mesh_bssid = '5c:c0:ac:00:d1:4c',
 		mesh_mcast_rate = 12000,
 	},
 	wifi5 = {
 		ssid = 'nord.freifunk.net',
 		channel = 44,
 		htmode = 'HT40+',
-		mesh_ssid = '5d:c0:ac:00:d1:4c',
-		mesh_bssid = '5d:c0:ac:00:d1:4c',
+		mesh_ssid = '5c:c0:ac:00:d1:4c',
+		mesh_bssid = '5c:c0:ac:00:d1:4c',
 		mesh_mcast_rate = 12000,
 	},
 
@@ -144,4 +144,31 @@ fastd_mesh_vpn = {
 			limit_ingress = 4000,
 		},
 	},
+
+	config_mode = {
+			msg_welcome = [[
+	Willkommen zum Einrichtungsassistenten für deinen neuen 
+	Freifunk-Nord-Knoten. Fülle das folgende Formular deinen Vorstellungen
+	entsprechend aus und sende es ab.
+	]],
+			msg_pubkey = [[
+	Dies ist der öffentliche Schlüssel deines Freifunkknotens. Erst nachdem
+	er auf den Servern des Freifunk-Nord-Projektes eingetragen wurde,
+	kann sich dein Knoten mit dem Kieler Mesh-VPN verbinden. Bitte
+	schicke dazu diesen Schlüssel und den Namen deines Knotens
+	(<em><%=hostname%></em>) an
+	<a href="mailto:freifunk-keys@in-kiel.de">freifunk-keys@in-kiel.de</a>.
+	]],
+			msg_reboot = [[
+	<p>
+	Dein Knoten startet gerade neu und wird anschließend versuchen,
+	sich mit anderen Freifunk-Knoten in seiner Nähe zu verbinden. Weitere Informationen zur
+	Kieler Freifunk-Community findest du auf
+	<a href="http://kiel.freifunk.net/">der Webseite</a> von Freifunk Kiel.
+	</p>
+	<p>
+	Viel Spaß mit deinem Knoten und der Erkundung von Freifunk!
+	</p>
+	]],
+		},
 }
