Correct the 2.4GHz channel again

--- a/site.conf
+++ b/site.conf
@@ -13,8 +13,8 @@
 
 	wifi24 = {
 		ssid = 'nord.freifunk.net',
-		channel = 11,
-		htmode = 'HT40-',
+		channel = 1,
+		htmode = 'HT40+',
 		mesh_ssid = '5c:c0:ac:00:d1:4c',
 		mesh_bssid = '5c:c0:ac:00:d1:4c',
 		mesh_mcast_rate = 12000,
